[tool.poetry]
name = "blogs"
version = "0.1.0"
description = ""
authors = ["le-chien <4_lapa@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
sqlalchemy = "^2.0.32"
uvicorn = "^0.30.6"
pydantic = { extras = ["email"], version = "^2.8.2" }
click = "^8.1.7"
pydantic-settings = "^2.4.0"


[tool.poetry.group.test.dependencies]
mypy = "^1.11.1"
ruff = "^0.6.1"
pytest = "^8.3.2"

[tool.ruff]
#include = ["", ]
line-length = 79
target-version = "py312"


[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "N", # pep8-naming
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "COM", # flake8-commas
    "UP", # pyupgrade
    "PT", # flake8-pytest-style
]
preview = true

[tool.ruff.format]
quote-style = 'single'
indent-style = 'space'

[tool.mypy]
packages = ['blogs']
check_untyped_defs = true
plugins = [
    "pydantic.mypy",
    "sqlalchemy.ext.mypy.plugin"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "fpho"
url = "https://files.pythonhosted.org"
priority = "primary"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"
